--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -2,11 +2,12 @@ header{
     margin: 0;
     padding: 0;
     width: 100vw;
+    position: fixed;
 }
 
 header h1 {
     margin: 0;
     padding: 20px 0;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(129, 92, 62, 0.4);
     text-align: center;
 }
